<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Route Creation Tool</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_stop_tracking_text">Stop Registration</string>
    <string name="button_start_tracking_text">Start Registration</string>
    <string name="button_restart_tracking_text">Start Over</string>
    <string name="title_activity_route_tracking">RouteTrackingActivity</string>
    <string name="title_activity_route_saver">RouteSaver</string>

    <!-- Route saver -->
    <string name="name_text_label">Name</string>
    <string name="duration_text_label">Duration (mins)</string>
    <string name="save_button_text">Save</string>
    <string name="saving_route_text">Saving route&#8230;</string>

</resources>